--- a/usuarioHistórico.html
+++ b/usuarioHistórico.html
@@ -1,231 +1,125 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meus Livros</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="assets/css/menu.css">
   <style>
-    :root{
-      --primary:#6a00d4;
-      --bg:#f5f5f7;
-      --text:#2d2d2f;
-      --muted:#7a7a7e;
-      --white:#fff;
-      --shadow:0 2px 8px rgba(0,0,0,.08);
-      --shadow-card:0 1px 3px rgba(0,0,0,.12);
-      --radius:12px;
-    }
+    /* .historico-container {
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 0 0 24px 0;
+        }
 
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      color:var(--text);
-      background:var(--bg);
-    }
-
-    .material-symbols-outlined {
-      font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-      font-size: 24px;
-      user-select: none;
-    }
-
-    /* Topbar */
-    .topbar{
-      position:sticky;
-      top:0;
-      z-index:50;
-      height:56px;
-      background:var(--primary);
-      color:var(--white);
-      display:flex;
-      align-items:center;
-      padding:0 16px;
-      box-shadow:var(--shadow);
-    }
-    .topbar .hamburger{
-      background:transparent;
-      border:0;
-      color:#fff;
-      cursor:pointer;
-      padding:8px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-
-    /* Container */
-    .container{
-      max-width:420px;
-      margin:0 auto;
-      padding:24px 16px;
-    }
-
-    /* Title */
-    .page-title{
-      text-align:center;
-      font-size:20px;
-      font-weight:600;
-      color:var(--text);
-      margin:0 0 8px 0;
-      padding-bottom:16px;
-      border-bottom:1px solid #ddd;
-    }
-
-    /* Cards */
-    .books-list{
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-      margin-top:24px;
-    }
-
-    .book-card{
-      background:var(--white);
-      border-radius:var(--radius);
-      padding:16px 20px;
-      box-shadow:var(--shadow-card);
-      border:1px solid #e8e8e8;
-      position:relative;
-      transition:.2s box-shadow;
-    }
-    .book-card:hover{
-      box-shadow:0 4px 12px rgba(0,0,0,.15);
-    }
-
-    .book-title{
-      font-size:16px;
-      font-weight:600;
-      color:var(--text);
-      margin:0 0 6px 0;
-    }
-
-    .book-meta{
-      font-size:14px;
-      color:var(--muted);
-      margin:3px 0;
-      line-height:1.5;
-    }
-
-    /* Status badge */
-    .status-badge{
-      position:absolute;
-      top:16px;
-      right:20px;
-      padding:6px 14px;
-      border-radius:20px;
-      font-size:13px;
-      font-weight:600;
-      color:#fff;
-      text-transform:capitalize;
-    }
-
-    .status-badge.comigo{
-      background:#2196F3;
-    }
-    .status-badge.entregue{
-      background:#4CAF50;
-    }
-    .status-badge.em-atraso{
-      background:#F44336;
-    }
-    .status-badge.pendente{
-      background:#FFC107;
-      color:#333;
-    }
-
-    /* Responsive adjustments */
-    @media (min-width: 768px){
-      .container{
-        max-width:720px;
-        padding:32px 24px;
-      }
-      .books-list{
-        display:grid;
-        grid-template-columns:repeat(2, 1fr);
-        gap:20px;
-      }
-    }
-
-    @media (min-width: 1024px){
-      .container{
-        max-width:960px;
-      }
-      .books-list{
-        grid-template-columns:repeat(3, 1fr);
-      }
-    }
+        .historico-titulo {
+            text-align: center;
+            font-size: 1.15rem;
+            font-weight: 500;
+            color: #23395d;
+            margin: 32px 0 8px 0;
+            letter-spacing: 0.5px;
+            background-color: #ea4335;
+        } */
   </style>
 </head>
+
 <body>
   <header class="topbar" role="banner">
-    <button class="hamburger" aria-label="Abrir menu">
+    <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
       <span class="material-symbols-outlined">menu</span>
     </button>
-  </header>
-
-  <main class="container">
-    <h1 class="page-title">MEUS LIVROS</h1>
-
-    <div class="books-list">
-      <!-- Card 1: Comigo -->
-      <article class="book-card">
-        <span class="status-badge comigo">Comigo</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
-
-      <!-- Card 2: Entregue -->
-      <article class="book-card">
-        <span class="status-badge entregue">Entregue</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
-
-      <!-- Card 3: Em Atraso -->
-      <article class="book-card">
-        <span class="status-badge em-atraso">Em Atraso</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
-
-      <!-- Card 4: Pendente -->
-      <article class="book-card">
-        <span class="status-badge pendente">Pendente</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
-
-      <!-- Card 5: Comigo -->
-      <article class="book-card">
-        <span class="status-badge comigo">Comigo</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
-
-      <!-- Card 6: Entregue -->
-      <article class="book-card">
-        <span class="status-badge entregue">Entregue</span>
-        <h2 class="book-title">Nome do Livro</h2>
-        <p class="book-meta">autor:</p>
-        <p class="book-meta">Data de entrega: 00/00/000</p>
-      </article>
+    <div class="brand">
+      <span>Biblioteca</span>
     </div>
-  </main>
-
-  <script>
-    // Drawer mobile (se integrar com menu lateral)
-    const btn = document.querySelector('.hamburger');
-    btn.addEventListener('click', () => {
-      // Aqui você pode integrar com o menu lateral do index.html
-      alert('Abrir menu lateral');
-    });
-  </script>
+  </header>
+  <!-- fim do menu -->
+  <div class="layout">
+    <!-- menu lateral -->
+    <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
+      <div class="nav-group">
+        <a class="nav-item active" href="#home">
+          <span class="material-symbols-outlined">home</span>
+          <span>Home</span>
+        </a>
+      </div>
+      <div class="nav-group">
+        <a class="nav-item " href="#buscar-livros">
+          <span class="material-symbols-outlined">home</span>
+          <span>Buscar livros</span>
+        </a>
+      </div>
+      <div class="nav-group">
+        <a class="nav-item " href="#meus-livros">
+          <span class="material-symbols-outlined">home</span>
+          <span>Meus livros</span>
+        </a>
+      </div>
+      <div class="nav-group">
+        <a class="nav-item" href="#meus-dados">
+          <span class="material-symbols-outlined">group</span>
+          <span>Meus Dados</span>
+        </a>
+      </div>
+      <div class="nav-group">
+        <a class="nav-item" href="#meus-dados">
+          <span class="material-symbols-outlined">logout</span>
+          <span>Sair</span>
+        </a>
+      </div>
+    </nav>
+    <!-- fim do menu lateral -->
+    <div class="backdrop" id="backdrop"></div>
+    <!-- conteúdo -->
+    <main class="content-book-history" role="main">
+      <div class="page-title">MEUS LIVROS</div>
+      <div class="books-history-list-card">
+        <div class="book-history-card">
+          <div class="book-title">Nome do Livro</div>
+          <div class="book-author">autor:</div>
+          <div class="book-date">
+            Data de entrega: 00/00/0000
+            <span class="book-status book-status--with-me">Comigo</span>
+          </div>
+        </div>
+        <div class="book-history-card">
+          <div class="book-title">Nome do Livro</div>
+          <div class="book-author">autor:</div>
+          <div class="book-date">
+            Data de entrega: 00/00/0000
+            <span class="book-status book-status--returned">Entregue</span>
+          </div>
+        </div>
+        <div class="book-history-card">
+          <div class="book-title">Nome do Livro</div>
+          <div class="book-author">autor:</div>
+          <div class="book-date">
+            Data de entrega: 00/00/0000
+            <span class="book-status book-status--returned">Entregue</span>
+          </div>
+        </div>
+        <div class="book-history-card">
+          <div class="book-title">Nome do Livro</div>
+          <div class="book-author">autor:</div>
+          <div class="book-date">
+            Data de entrega: 00/00/0000
+            <span class="book-status book-status--pending ">Pendente</span>
+          </div>
+        </div>
+        <div class="book-history-card">
+          <div class="book-title">Nome do Livro</div>
+          <div class="book-author">autor:</div>
+          <div class="book-date">
+            Data de entrega: 00/00/0000
+            <span class="book-status book-status--late">Em atraso</span>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
