--- a/adminHome.html
+++ b/adminHome.html
@@ -7,7 +7,8 @@
     <title>Dashboard - Biblioteca</title>
      <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/admin.css">
 </head>
 
 <body>
@@ -60,8 +61,6 @@
         </nav>
 
         <div class="backdrop" id="backdrop"></div>
-
-
 
         <!-- Main Content -->
         <main class="content">
@@ -119,7 +118,7 @@
                     <button class="shortcut-btn">Retirada de livros</button>
                     <button class="shortcut-btn">Confirmar devolução</button>
                     <button class="shortcut-btn">Verificar usuários</button>
-                    <button class="shortcut-btn full-width">Todos os livros</button>
+                    <button class="shortcut-btn">Todos os livros</button>
                 </div>
             </section>
         </main>
