--- a/menuBibliotecario.html
+++ b/menuBibliotecario.html
@@ -204,7 +204,7 @@
                 left: 0;
                 height: calc(100vh - 56px);
                 transform: translateX(-100%);
-                transition: transform .25s ease;
+               transition: opacity 0.3s ease-in-out;
                 box-shadow: var(--shadow);
                 z-index: 60;
             }
